fix testAck + add testPingReq